<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gc.productorders.ProductsActivity" >

    <TextView
        android:id="@+id/productsAddProductTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/products_select_products"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/qtyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/productsAddProductTxt"
        android:layout_below="@+id/productsAddProductTxt"
        android:layout_marginTop="16dp"
        android:text="@string/products_text_sku"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/qtySelector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/skuTxt"
        android:layout_below="@+id/skuTxt"
        android:entries="@array/qty_selector"
        android:background="@+color/blue" />

    <TextView
        android:id="@+id/skuTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/qtyTxt"
        android:layout_below="@+id/qtyTxt"
        android:layout_marginTop="56dp"
        android:text="@string/products_text_qty"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/productTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/qtyTxt"
        android:layout_alignRight="@+id/qtySelector"
        android:layout_below="@+id/qtyTxt"
        android:background="@+color/blue"
        android:enabled="false"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/addToCartBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qtySelector"
        android:layout_centerHorizontal="true"
        android:text="@string/products_add_to_cart"
        android:onClick="onAddToCartBtnClick" />

    <ListView
        android:id="@+id/productsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/qtySelector"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/addToCartBtn" >

    </ListView>

</RelativeLayout>